--- a/styles.css
+++ b/styles.css
@@ -250,6 +250,10 @@ Sidebar
   /* transform: translate(-100%); */
 }
 
+.show-sidebar {
+  transform: translate(0);
+}
+
 @media screen and (min-width: 676px) {
   .sidebar {
     width: 400px;
